--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase-admin": "^13.2.0",
     "framer-motion": "^12.4.10",
     "ical.js": "^2.1.0",
+    "nvm": "^0.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.3.0"
