--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
+    "axios": "^1.8.4",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.2.0",
     "framer-motion": "^12.4.10",
     "ical.js": "^2.1.0",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
